# BenchmarkApp

./: build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/myappbench/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/urutauappfinal/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/c/: c_binarytree.c  c_binarytrees.c  c_fannkuch.c  c_fasta.c  c_nbody.c  c_pidigits.c
app/src/main/cpp/: CMakeLists.txt  c_binarytree.c  c_fannkuch.c  c_nbody.c  c_pidigits.c  cpidigits.c  cpp_binarytree.cpp  cpp_binarytrees.cpp  cpp_fannkuch.cpp  cpp_fasta.cpp  cpp_nbody.cpp  cpp_pidigits.cpp  cppidigits.cpp  native-lib.cpp
app/src/main/go/: go.cpp
app/src/main/go/code/: Makefile  go.mod  go_binarytrees.go  go_fannkuch.go  go_fasta.go  go_nbody.go  go_pidigits.go  main.go
app/src/main/golang/: goBinarytree.go  goFannkuch.go  goNbody.go  goPidigits.go  go_binarytrees.go  go_fannkuch.go  go_fasta.go  go_nbody.go  go_pidigits.go
app/src/main/golang/binarytree/: go.mod  go.sum  gobinarytree.go
app/src/main/golang/fannkuch/: go.mod  gofannkuch.go
app/src/main/golang/nbody/: go.mod  gonbody.go
app/src/main/java/com/example/app/: MainActivity.java  PiBenchGameJava.java  PiBenchGameKt.kt
app/src/main/java/com/example/myappbench/: BodyBenchGameJava.java  BodyBenchGameKt.kt  FannkuchBenchGameJava.java  FannkuchBenchGameKt.kt  MainActivity.kt  MeasureMemory.kt  PiBenchGameJava.java  PiBenchGameKt.kt  TreeBenchGameJava.java  TreeBenchGameKt.kt
app/src/main/java/com/example/myappbench/algorithm/: Algorithm.java
app/src/main/java/com/example/myappbench/algorithm/c/: CAlgorithms.java
app/src/main/java/com/example/myappbench/algorithm/code/java/: PiBenchGameJava.java
app/src/main/java/com/example/myappbench/algorithm/code/kotlin/: PiBenchGameKt.kt
app/src/main/java/com/example/myappbench/algorithm/compat/PiDigits/: JavaPiDigits.java  KtPiDigits.java  PiDigits.java
app/src/main/java/com/example/myappbench/algorithm/cpp/: CppAlgorithms.java
app/src/main/java/com/example/myappbench/algorithm/go/: GoAlgorithms.java
app/src/main/java/com/example/myappbench/algorithm/java/: BodyBenchGameJava.java  FannkuchBenchGameJava.java  JavaBinaryTrees.java  JavaFannkuch.java  JavaFasta.java  JavaNBody.java  JavaPiDigits.java  PiBenchGameJava.java  TreeBenchGameJava.java
app/src/main/java/com/example/myappbench/algorithm/kotlin/: BodyBenchGameKt.kt  FannkuchBenchGameKt.kt  KtBinaryTrees.java  KtFannkuch.java  KtFasta.java  KtNBody.java  KtPiDigits.java  PiBenchGameKt.kt  TreeBenchGameKt.kt
app/src/main/java/com/example/myappbench/algorithm/python/: PyAlgorithms.java
app/src/main/java/com/example/myappbench/benchmarking/: Benchmark.java  BenchmarkData.java
app/src/main/java/com/example/myappbench/measure/: Benchmark.java  MeasureFactory.java
app/src/main/java/com/example/myappbench/measure/energy/: BatteryMonitorThread.java  EnergyMeasure.java
app/src/main/java/com/example/myappbench/measure/memory/: MemoryMeasure.java  MemoryMonitorThread.kt
app/src/main/java/com/example/myappbench/measuring/: Measure.java  MeasureFactory.java
app/src/main/java/com/example/myappbench/measuring/energy/: BatteryMonitorThread.java  EnergyMeasure.java
app/src/main/java/com/example/myappbench/measuring/memory/: MemoryMeasure.java  MemoryMonitorThread.kt
app/src/main/java/com/example/urutauappfinal/: MainActivity.kt
app/src/main/java/com/example/urutauappfinal/algorithms/c/: CAlgorithms.java
app/src/main/java/com/example/urutauappfinal/algorithms/cpp/: CppAlgorithms.java
app/src/main/java/com/example/urutauappfinal/algorithms/java/: JavaBinaryTrees.java  JavaFannkuch.java  JavaFasta.java  JavaNBody.java  JavaPiDigits.java
app/src/main/java/com/example/urutauappfinal/algorithms/kotlin/: KtBinaryTrees.java  KtFannkuch.java  KtFasta.java  KtNBody.java  KtPiDigits.java
app/src/main/java/com/example/urutauappfinal/algorithms/python/: PyAlgorithms.java
app/src/main/java/com/example/urutauappfinal/benchmarking/: Benchmark.java  BenchmarkData.java
app/src/main/java/com/example/urutauappfinal/collectionFiles/: EscritorDeArquivo.java
app/src/main/java/com/example/urutauappfinal/measuring/: GeneralMeasure.java  Measure.java  MeasureFactory.java  MonitorThread.java
app/src/main/java/com/example/urutauappfinal/measuring/energy/: BatteryMonitorThread.java  EnergyMeasure.java
app/src/main/java/com/example/urutauappfinal/measuring/memory/: MemoryMeasure.java  MemoryMonitorThread.kt
app/src/main/jni/apr/: CMakeLists.txt
app/src/main/jni/apr/arm64-v8a/include/apr-1/: apr.h
app/src/main/jni/apr/arm64-v8a/lib/: libapr-1.la
app/src/main/jni/apr/arm64-v8a/lib/pkgconfig/: apr-1.pc
app/src/main/jni/apr/armeabi-v7a/include/apr-1/: apr.h
app/src/main/jni/apr/armeabi-v7a/lib/: libapr-1.la
app/src/main/jni/apr/armeabi-v7a/lib/pkgconfig/: apr-1.pc
app/src/main/jni/apr/x86/lib/: libapr-1.la
app/src/main/jni/apr/x86/lib/pkgconfig/: apr-1.pc
app/src/main/jni/apr/x86_64/lib/: libapr-1.la
app/src/main/jni/apr/x86_64/lib/pkgconfig/: apr-1.pc
app/src/main/jni/boost/: CMakeLists.txt
app/src/main/jni/gmp/: CMakeLists.txt
app/src/main/jni/goalgo/: CMakeLists.txt
app/src/main/jni/goalgo/arm64-v8a/: goalgo.h
app/src/main/jni/goalgo/armeabi-v7a/: goalgo.h
app/src/main/python/: PyBinaryTrees.py  PyDigitis.py  PyFannkuch.py  PyFasta.py  PyNbody.py  PyPidigits.py  pyBinaryTrees.py  pyFannkuch.py  pyFasta.py  pyNBody.py  pyPiDigits.py
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/rust/: rsFannkuch.rs  rsNbody.rs  rsPidigits.rs  rs_binarytrees.rs  rs_fannkuch.rs  rs_fasta.rs  rs_nbody.rs  rs_pidigits.rs
app/src/main/rust/FannkuchRedux/: Cargo.toml
app/src/main/rust/NBody/: Cargo.toml
app/src/main/rust/PiDigits/: Cargo.toml
app/src/test/java/com/example/myappbench/: ExampleUnitTest.kt
app/src/test/java/com/example/urutauappfinal/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
